cmake_minimum_required(VERSION 3.10)
project(SimulatedCells)
set(CMAKE_CXX_STANDARD 20)
find_package(SFML REQUIRED COMPONENTS graphics window system)
include_directories(src include lib)
file(GLOB SOURCES "src/*.cpp")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_executable(SimulatedCells ${SOURCES})
target_link_libraries(SimulatedCells sfml-graphics sfml-window sfml-system)